force-app/main/default/objects/Doctor_Reviews__dlm/fields/KQ_Provider_Email__c.field-meta.xml
<CustomField>
    <fullName>KQ_Provider_Email__c</fullName>
    <label>Key Qualifier Provider_Email</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Provider_Email</labelOverride>
        <masterLabel>Key Qualifier Provider_Email</masterLabel>
        <refAttrDeveloperName>KQ_Provider_Email</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>