force-app/main/default/objects/Doctor_Reviews__dlm/fields/KQ_Review_Id__c.field-meta.xml
<CustomField>
    <fullName>KQ_Review_Id__c</fullName>
    <label>Key Qualifier Review_Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Review_Id</labelOverride>
        <masterLabel>Key Qualifier Review_Id</masterLabel>
        <refAttrDeveloperName>KQ_Review_Id</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>