force-app/main/default/objects/Doctor_Reviews__dlm/fields/Provider_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Provider_Salutation__c</fullName>
    <label>Provider_Salutation</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Provider_Salutation</labelOverride>
        <masterLabel>Provider_Salutation</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>