force-app/main/default/objects/Doctor_Reviews__dlm/fields/rel_1777197044182_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1777197044182_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor_Reviews_Provider_Email_map_ss_rel</label>
    <referenceTo>ssot__ContactPointEmail__dlm</referenceTo>
    <relationshipLabel>Doctor_Reviews_Provider_Email_map_ss_rel</relationshipLabel>
    <relationshipName>rel_1777197044182_end</relationshipName>
    <type>Lookup</type>
</CustomField>