force-app/main/default/objects/Doctor_Reviews__dlm/fields/Review_Id__c.field-meta.xml
<CustomField>
    <fullName>Review_Id__c</fullName>
    <label>Review_Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Review_Id</labelOverride>
        <masterLabel>Review_Id</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>