force-app/main/default/objects/Doctor_Reviews__dlm/fields/Review_Text__c.field-meta.xml
<CustomField>
    <fullName>Review_Text__c</fullName>
    <label>Review_Text</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Review_Text</labelOverride>
        <masterLabel>Review_Text</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>