force-app/main/default/objects/Doctor_Reviews__dlm/fields/Would_Recommend__c.field-meta.xml
<CustomField>
    <fullName>Would_Recommend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Would_Recommend</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Would_Recommend</labelOverride>
        <masterLabel>Would_Recommend</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>